# OpenGL-Ray

./: CMakeLists.txt  README.md
assets/: frag.fs
cimgui/imgui/impl/: imgui_impl_opengl3.h
include/render/: render.h  setup.h  shader.h
src/: main.c
src/render/: render.c  setup.c  shader.c
